--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <html lang="en">
+        <head>
+            <link rel="stylesheet" href="style.css">
+            <title>My Site Title</title>
+        </head>
+        <body>
+            
+            <h1> HELLO WORLD</h1>
+            <pp>flatiron School</pp>
+            <a href="https://flatironschool.com">Flatiron School</a>
+
+        </body>
+</html>
